# tree-sitter-sieve

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sieve.pc.in
bindings/c/tree_sitter/: tree-sitter-sieve.h
bindings/go/: binding.go  binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sieve/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSieveTests/: TreeSitterSieveTests.swift
docs/: book.toml
docs/src/: benchmarks.md
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
