[package]
name = "tree-sitter-sieve"
description = "Language support for Sieve email filtering language (RFC 5228) with Proton advanced features"
version = "0.1.0"
authors = ["aRustyDev <36318507+aRustyDev@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sieve"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/arustydev/tree-sitter-sieve"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
